--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Flexbox Layout</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="works_on_smartphone">
     <header>
         Content of the &lt;header&gt; tag
     </header>
