--- a/headphones/1-index.html
+++ b/headphones/1-index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="0-styles.css">
-    <link rel="stylesheet" href="1-styles.css"
+    <link rel="stylesheet" href="1-styles.css">
+    <link re="stylesheet"  href="2-styles.css">
+    <link rel="stylesheet" href="3-styles.css">
 </head>
 <header>
  <div class="logo container">
@@ -16,11 +18,12 @@
      </div>
      <span class="logo-text">HEADPHONES</span>
  </div>
- 
  <!--Normal desktop navigation-->
  <nav>
     <ul>
         <li><a href="#what we do">What we do</a></li>
+        <li><a class="A" href="#our results">Our results</a></li>
+        <li><a class="B" href="#contact us">contact us</a></li>
     </ul>
  </nav>
 
@@ -30,8 +33,16 @@
     <nav id="mobile-menu" class="hidden">
       <ul>
         <li><a href="what-we-do.html">What we do</a></li>
+        <li><a class="a" href="our results">Our results</a></li>
+        <li><a class="b" href="contact us">contact us</a></li>
     </ul>
 </nav>
+</div>
+<div>
+    <h1>Ut velit iure qui provident consequatur sit ipsum!</h1>
+    <p>Ut necessitatibus nemo eum iste quia ut dolorum modi hic</p>
+    <button>Call to action</button>
+    <p class="v">Lorem ipsum dolor sit amet.<br> Et laborum nostrum aut dignissimos omnis non accusantium possimus.<br> Eum molestias iure a voluptatum vero a nesciunt voluptas aut aperiam iste et temporibus itaque. </p>
 </div>
 </header>
 <body>
