--- a/headphones/1-index.html
+++ b/headphones/1-index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="0-styles.css">
     <link rel="stylesheet" href="1-styles.css">
-    <link re="stylesheet"  href="2-styles.css">
-    <link rel="stylesheet" href="3-styles.css">
 </head>
 <header>
  <div class="logo container">
@@ -18,6 +16,7 @@
      </div>
      <span class="logo-text">HEADPHONES</span>
  </div>
+ 
  <!--Normal desktop navigation-->
  <nav>
     <ul>
@@ -26,7 +25,6 @@
         <li><a class="B" href="#contact us">contact us</a></li>
     </ul>
  </nav>
-
  <!-- Mobile hamburger menu -->
  <div class="mobile-nav">
     <button class="hamburger" onclick="toggleMenu()">☰</button>
@@ -46,6 +44,31 @@
 </div>
 </header>
 <body>
-     
+    <section>
+        <div>
+            <h1 class="z">What we do...</h1>
+            <p class="r">Et dolorum accusamus quo assumenda blanditiis et labore nemo.<br> Est voluptatibus harum rem ducimus quae non voluptatum sunt eos quia ipsam. <br>Sed maxime iure et galisum enim sed ullam similique. Quo dolores iusto At distinctio animi et earum unde et provident consectetur ex minus veniam.</p>
+        </div>
+        <div>
+            <img src="sound wave.png" alt="sound wave.png">
+            <p class="Ba">Lorem Ipsum</p>
+            <p class="Ca"> voluptatem impedit,<br>reprehenderit eligendi.</p>
+        </div>
+            <div>
+            <img src="movie act.png" class="g">
+            <p class="f">Lorem Ipsum</p>
+            <p class="t">voluptatem impedit,<br>reprehenderit eligendi.</p>
+            </div>
+            <div>
+            <img src="music.png" class="w">
+             <p class="l">Lorem Ipsum</p>
+             <p class="la">voluptatem impedit,<br>reprehenderit eligendi.</p>
+            </div> 
+            <div>
+                <img src="listnening.jpeg" class="wa">
+                <p class="s">Lorem Ipsum</p>
+                <p class="h">voluptatem impedit,<br>reprehenderit eligendi.</p>
+            </div>          
+    </section> 
 </body>
-</html>
+</html>         
