--- a/headphones/2-index.html
+++ b/headphones/2-index.html
@@ -1,42 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="0-styles.css">
-    <link rel="stylesheet" href="1-styles.css"
-    <link rel="stylesheet" href="2-styles.css">
-</head>
-<header>
- <div class="logo container">
-     <div class="icon">
-        <div class="outer-border"></div>
-        <div class="middle-border"></div>
-        <div class="center-shape"></div>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="0-styles.css">
+        <link rel="stylesheet" href="1-styles.css">
+        <link rel="stylesheet" href="2-styles.css">
+    </head>
+    <header>
+     <div class="logo container">
+         <div class="icon">
+            <div class="outer-border"></div>
+            <div class="middle-border"></div>
+            <div class="center-shape"></div>
+         </div>
+         <span class="logo-text">HEADPHONES</span>
      </div>
-     <span class="logo-text">HEADPHONES</span>
- </div>
- 
- <!--Normal desktop navigation-->
- <nav>
-    <ul>
-        <li><a href="#what we do">What we do</a></li>
-        <li><a class="A" href="#our results">Our results</a></li>
-    </ul>
- </nav>
-
- <!-- Mobile hamburger menu -->
- <div class="mobile-nav">
-    <button class="hamburger" onclick="toggleMenu()">☰</button>
-    <nav id="mobile-menu" class="hidden">
-      <ul>
-        <li><a href="what-we-do.html">What we do</a></li>
-    </ul>
-</nav>
-</div>
-</header>
-<body>
      
-</body>
-</html>
+     <!--Normal desktop navigation-->
+     <nav>
+        <ul>
+            <li><a href="#what we do">What we do</a></li>
+            <li><a class="A" href="#our results">Our results</a></li>
+            <li><a class="B" href="#contact us">contact us</a></li>
+        </ul>
+     </nav>
+     <!-- Mobile hamburger menu -->
+     <div class="mobile-nav">
+        <button class="hamburger" onclick="toggleMenu()">☰</button>
+        <nav id="mobile-menu" class="hidden">
+          <ul>
+            <li><a href="what-we-do.html">What we do</a></li>
+            <li><a class="a" href="our results">Our results</a></li>
+            <li><a class="b" href="contact us">contact us</a></li>
+        </ul>
+    </nav>
+    </div>
+    <div>
+        <h1>Ut velit iure qui provident consequatur sit ipsum!</h1>
+        <p>Ut necessitatibus nemo eum iste quia ut dolorum modi hic</p>
+        <button>Call to action</button>
+        <p class="v">Lorem ipsum dolor sit amet.<br> Et laborum nostrum aut dignissimos omnis non accusantium possimus.<br> Eum molestias iure a voluptatum vero a nesciunt voluptas aut aperiam iste et temporibus itaque. </p>
+    </div>
+    </header>
+    <body>
+        <section>
+            <div>
+                <h1 class="z">What we do...</h1>
+                <p class="r">Et dolorum accusamus quo assumenda blanditiis et labore nemo.<br> Est voluptatibus harum rem ducimus quae non voluptatum sunt eos quia ipsam. <br>Sed maxime iure et galisum enim sed ullam similique. Quo dolores iusto At distinctio animi et earum unde et provident consectetur ex minus veniam.</p>
+            </div>
+            <div>
+                <img src="sound wave.png" alt="sound wave.png">
+                <p class="Ba">Lorem Ipsum</p>
+                <p class="Ca"> voluptatem impedit,<br>reprehenderit eligendi.</p>
+            </div>
+                <div>
+                <img src="movie act.png" class="g">
+                <p class="f">Lorem Ipsum</p>
+                <p class="t">voluptatem impedit,<br>reprehenderit eligendi.</p>
+                </div>
+                <div>
+                <img src="music.png" class="w">
+                 <p class="l">Lorem Ipsum</p>
+                 <p class="la">voluptatem impedit,<br>reprehenderit eligendi.</p>
+                </div> 
+                <div>
+                    <img src="listnening.jpeg" class="wa">
+                    <p class="s">Lorem Ipsum</p>
+                    <p class="h">voluptatem impedit,<br>reprehenderit eligendi.</p>
+                </div>          
+        </section> 
+        <section>
+            <div class="v">
+            <h1 class="ss">Our results speack for themselves</h1>
+            <p class="m"> Est Quis vero qui iste nulla rem quia consequuntur sit totam bland.<br>perspiciatis et reiciendis assumenda id velit iste At vitae ipsum. <br>Est Quis vero qui iste nulla rem quia consequuntur sit totam bland.<br> dolore perspiciatis et reiciendis assumenda id velit iste At vitae ipsum qui.</p>
+            </div>
+            <div class="polygon"></div>
+            <p class="k">+2%</p>
+            <p class="x">Lorem Ipsum</p>
+
+            <div class="polygon-1"></div>
+            <p class="p">+2%</p>
+            <p class="n">Lorem Ipsum</p>
+           
+            <div class="polygon-2"></div>
+            <p class="pa">+2%</p>
+            <p class="na">Lorem Ipsum</p>
+
+            <div class="polygon-3"></div>
+            <p class="ra">+2%</p>
+            <p class="fa">Lorem Ipsum</p>
+        </section>
+    </body>
+    </html>         
